--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-@import url(//db.onlinewebfonts.com/c/f02cf2e6e27a17bcfe9efa18c041c208?family=Redcollar);
-@import url(//fonts.cdnfonts.com/css/tt-commons);
+@import url(https://db.onlinewebfonts.com/c/f02cf2e6e27a17bcfe9efa18c041c208?family=Redcollar);
+@import url(https://fonts.cdnfonts.com/css/tt-commons);
 
 * {
   margin: 0;
