--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
-@import url(https://db.onlinewebfonts.com/c/f02cf2e6e27a17bcfe9efa18c041c208?family=Redcollar);
-
 @font-face {
   font-family: "Redcollar";
-  src: url("/fonts/redCollar.ttf"),
+  src: url("./fonts/someSerif.woff2")
 }
 
 @font-face {
-  font-family: "TT Commons";
-  src: url("/fonts/ttCommons.woff2") format("woff2"),
+  font-family: "TTCommons";
+  src: url("/fonts/TTCommons-Regular.woff2");
 }
 
 * {
@@ -18,13 +16,17 @@
   box-sizing: border-box;
 }
 
+body{
+  font-family: "TTCommons";
+}
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: "Redcollar", sans-serif;
+  font-family: "Redcollar";
 }
 
 a {
@@ -39,7 +41,7 @@ a {
   position: relative;
   display: flex;
   column-gap: 32px;
-  font-family: 'TT Commons', sans-serif;
+  font-family: "TTCommons";
   color: #fff;
   font-size: 18px;
   line-height: 24px;
