--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Redcollar";
-  src: url("./fonts/someSerif.woff2")
+  src: url("./fonts/redCollar.ttf")
 }
 
 @font-face {
